syntax = "proto3";

package struct;

option go_package = "github.com/ImSingee/structpb";

// `Dict` represents a structured data value, consisting of fields
// which map to dynamically typed values.
//
// The JSON representation for `Struct` is JSON object.
message Dict {
  // Unordered map of dynamically typed values.
  map<string, Value> fields = 1;
}

// `Value` represents a dynamically typed value which can be either
// null, a number, a string, a boolean, a recursive struct value, or a
// list of values. A producer of value is expected to set one of that
// variants, absence of any variant indicates an error.
//
// The JSON representation for `Value` is JSON value.
message Value {
  // The kind of value.
  oneof kind {
    // Represents a null value.
    NullValue null_value = 1;
    // Represents a number value
    int64 int_value = 7;
    // Represents a float value.
    double float_value = 2;
    // Represents a string value.
    string string_value = 3;
    // Represents a boolean value.
    bool bool_value = 4;
    // Represents a structured value.
    Dict dict_value = 5;
    // Represents a repeated `Value`.
    List list_value = 6;
  }
}

// `NullValue` is a singleton enumeration to represent the null value for the
// `Value` type union.
//
//  The JSON representation for `NullValue` is JSON `null`.
enum NullValue {
  // Null value.
  NULL_VALUE = 0;
}

// `List` is a wrapper around a repeated field of values.
//
// The JSON representation for `List` is JSON array.
message List {
  // Repeated field of dynamically typed values.
  repeated Value values = 1;
}